--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "debug": "^4.3.4",
     "express": "^4.18.2",
     "joi": "^17.9.2",
+    "mongodb": "^5.5.0",
     "mongoos": "^0.0.1-security",
     "morgan": "^1.10.0",
     "nodemon": "^2.0.22",
