--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "joi": "^17.9.2",
     "mongodb": "^5.5.0",
     "mongoos": "^0.0.1-security",
+    "mongoose": "^7.2.1",
     "morgan": "^1.10.0",
     "nodemon": "^2.0.22",
     "pug": "^3.0.2"
